--- a/package.json
+++ b/package.json
@@ -85,5 +85,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "engines": {
+    "node": ">=17.9.1 <19.0.0"
   }
 }
